Adding mapper request and references - not finished cont soon...

--- a/WebLabApp/Lab.Infrasturcture/Lab.Infrasturcture.csproj
+++ b/WebLabApp/Lab.Infrasturcture/Lab.Infrasturcture.csproj
@@ -10,4 +10,8 @@
       <Folder Include="Data\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Lab.Domain\Lab.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
