--- a/WebLabApp/Lab.App/Lab.App.csproj
+++ b/WebLabApp/Lab.App/Lab.App.csproj
@@ -11,4 +11,13 @@
       <Folder Include="UnitOfWorks\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Lab.Domain\Lab.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
